# BossZhipin_reverse

./: .gitignore  LICENSE  README.md  SKILL.md  cli.py  pyproject.toml  requirements.txt
core/: browser.py  mitm_addon.py  patching.py  rpc.py  server.py
docs/: ARCHITECTURE.md  BOSS_DEEP_DIVE.md  PLUGIN_GUIDE.md  REVERSE_ENGINEERING.md
pipelines/: __init__.py  example_dedup.py  example_filter.py  example_webhook.py
scripts/: doctor.ps1  healthcheck.py  setup.ps1  setup_cert.ps1  start.ps1  validate_boss_patches.py
sites/: _base.py
sites/boss/: __init__.py  injection.js  operations.py  patches.py
storage/: __init__.py  _base.py  csv_storage.py  excel_storage.py  jsonl_storage.py  mysql_storage.py  sqlite_storage.py
tests/: gen_external_request.py  greet_from_csv.py  test_boss_health.py  test_boss_operations.py  test_capture_gate.py  test_patching.py  test_rpc.py
