[project]
name = "mitm-rpc"
version = "0.1.0"
description = "Bypass anti-bot/anti-debug by turning your browser into an RPC client. Site-agnostic, plugin-based."
authors = [{ name = "lsd" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "mitmproxy>=12.0",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["core*", "sites*", "storage*", "pipelines*"]
exclude = ["analysis*", "data*", "tests*"]
